--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -14,11 +14,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FoodForNation"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activities.addNewItem"/>
+        <activity android:name=".activities.RegisterActivity"/>
+        <activity android:name=".activities.CategoryDetailsActivity" />
+        <activity android:name=".activities.addNewItem" />
         <activity android:name=".activities.UserProfileActivity" />
         <activity android:name=".activities.ItemDetailsActivity" />
         <activity android:name=".activities.ItemsListActivity" />
-        <activity android:name=".activities.CategoryDetailsActivity">
+        <activity android:name=".activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
