--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="go.faddy.foodfornation">
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_USER_DICTIONARY" />
 
     <uses-feature
         android:name="android.hardware.camera.any"
@@ -9,23 +15,19 @@
         android:name="android.hardware.camera.autofocus"
         android:required="false" />
 
-    <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_USER_DICTIONARY" />
 
-    <permission
-        android:name="PlatesContentProvider._READ_PERMISSION"
-        android:protectionLevel="normal" />
-    <permission
-        android:name="PlatesContentProvider._WRITE_PERMISSION"
-        android:protectionLevel="normal" />
-    <permission android:name="go.faddy.foodfornation.PERMISSION" />
+
+<!--    <permission-->
+<!--        android:name="PlatesContentProvider._READ_PERMISSION"-->
+<!--        android:protectionLevel="normal" />-->
+<!--    <permission-->
+<!--        android:name="PlatesContentProvider._WRITE_PERMISSION"-->
+<!--        android:protectionLevel="normal" />-->
+<!--    <permission android:name="go.faddy.foodfornation.PERMISSION" />-->
 
     <application
         android:allowBackup="true"
+        android:requestLegacyExternalStorage="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
